# ModelRunner

./: Cargo.toml  Makefile
src/: main.rs
src/api/: client.rs
src/inference/: audio_pipeline.rs  common.rs  mod.rs
src/inference/models/: whisper.rs
