[package]
name = "model_runner"
version = "1.4.4"
edition = "2021"
repository = "https://github.com/frkri/ModelRunner"
license = "MIT"
description = "Run LLM models locally with an HTTP API"
keywords = ["LLM", "API", "HTTP"]
readme = "README.md"

[profile.dev]
opt-level = 3 # Required as otherwise the models are too slow to run

[profile.release]
codegen-units = 1
strip = true
lto = true

[[bin]]
name = "model_runner_cli"
path = "src/bin/cli.rs"

[[bin]]
name = "model_runner_health"
path = "src/bin/health.rs"

[dependencies]
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
tracing-opentelemetry = { version = "0.24.0", features = ["metrics"] }
tracing-chrome = "0.7.2"
opentelemetry = { version = "0.23.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio", "metrics", "trace"] }
opentelemetry-otlp = { version = "0.16.0", features = ["tonic", "metrics", "trace"] }
opentelemetry-semantic-conventions = "0.15.0"
tower-http = { version = "0.5.2", features = ["trace"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "rt", "signal"] }
lazy_static = "1.4.0"
reqwest = { version = "0.12.4", default-features = false, features = ["blocking", "rustls-tls"] }
axum = { version = "0.7.5", features = ["form", "http1", "json", "matched-path", "original-uri", "query", "tokio", "tower-log", "tracing", "http2", "macros", "multipart"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
axum-macros = "0.4.1"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.120"
toml = "0.8.13"
clap = { version = "4.5.9", features = ["derive", "color", "env"] }
clap-serde-derive = "0.2.1"
tokenizers = "0.19.1"
hf-hub = "0.3.2"
candle-transformers = "0.6.0"
candle-core = "0.6.0"
candle-nn = "0.6.0"
byteorder = "1.5.0"
symphonia = "0.5.3"
rand = "0.8.5"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite", "sqlx-sqlite"] }
password-hash = "0.5.0"
argon2 = "0.5.3"
base64ct = "1.6.0"
url = "2.5.0"
bitflags = { version = "2.6.0", features = ["serde"] }
accelerate-src = { version = "0.3.2", optional = true }
candle-flash-attn = { version = "0.6.0", optional = true }
half = { version = "2.4.1", features = ["num-traits", "use-intrinsics", "rand_distr"], optional = true }
cudarc = { version = "0.11.7", features = ["f16"], optional = true }
intel-mkl-src = { version = "0.8.1",features = ["mkl-static-lp64-iomp"], optional = true }

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = "0.5.4"

[features]
default = []
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["candle-core/cudnn"]
flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
nccl = ["cuda", "cudarc/nccl", "dep:half"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]


# [features]
# default = []
# accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
# cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
# cudnn = ["candle-core/cudnn"]
# flash-attn = ["cuda", "candle-transformers/flash-attn", "dep:candle-flash-attn"]
# mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
# nccl = ["cuda", "cudarc/nccl", "dep:half"]
# metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
